--- a/src/components/auth-form-wrapper/auth-form-wrapper.module.scss
+++ b/src/components/auth-form-wrapper/auth-form-wrapper.module.scss
@@ -1,5 +1,5 @@
 .container {
-	width: 24em;
+	width: 22em;
 }
 
 .headerContainer {
@@ -7,7 +7,7 @@
 }
 
 .logo {
-	width: 12em;
+	width: 10em;
 	margin-bottom: 2em;
 }
 
