--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -1,5 +1,5 @@
 .container {
 	display: flex;
 	justify-content: center;
-	padding-top: 2em;
+	padding-top: 1em;
 }
